<!-- Creación de las cadenas de texto de la APP -->
<resources>
    <string name="condiciones_servicios_informacion">Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir, desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) las funciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin comercial o publicitario</string>
    <string name="politicas_usuario">Se recopilará datos de un modo que, por sí mismos, no pueden ser asociados directamente a una persona determinada. Estos datos de carácter no personal se pueden recopilar, tratar, transferir y publicar con cualquier intención</string>
    <string name="recuperar_cuenta_informacion">RECUPERACIÓN DE LA CUENTA \n Si ha olvidado su contraseña ingrese su NOMBRE DE USUARIO con el cual se registro, se le enviará un código de confirmación al correo asociado al usuario para restablecer la contraseña</string>
    <string name="informacion_configuracion">La configuración del usuario le permite configurar las preferencias de idioma y de correo electrónico, mientras que los datos de la cuenta le permiten controlar su configuración del uso compartido de datos.</string>
    <string name="enviar_comentarios">ENVÍANOS TUS COMENTARIOS \n Queremos saber tu opinión sobre la APP. Comentanos sobre algún error en la APP o como podemos mejorar nuestro servicio</string>
    <string name="lateral_ayuda">ENVÍANOS TUS COMENTARIOS \n Queremos saber tu opinión sobre la APP. Comentanos sobre algún error en la APP o como podemos mejorar nuestro servicio</string>
    <string name="error_singup">Error al crear el usuario. El nombre de usuario no debe tener espacios en blanco</string>
    <string name="codigo_enviado">Se ha enviado el Código de Verificación a su Correo Electrónico</string>
    <string name="logitud_password_incorrecta">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="correo_invalido">El Correo Ingresado No Cumple con los Parametros</string>
    <string name="informacion_administrador">Información del Administrador</string>
    <string name="codigo_confirmacion">Ingrese el Código de Confirmación</string>
    <string name="nuevo_confirmar_password_usuario">Confirmar Contraseña</string>
    <string name="falta_codigo">Debe Ingresar el Código de Confirmación</string>
    <string name="usuario_incorrecto">Usuario o Contraseña Incorrectos</string>
    <string name="confirmar_nuevo_password">Confirmar Nueva Contraseña</string>
    <string name="configuraciones_usuario">Configuraciones de Usuario</string>
    <string name="usuario_actualizado">Usuario Actualizado con Éxito</string>
    <string name="usuario_recuperacion">Ingrese el Nombre de Usuario</string>
    <string name="inicio_sesion_fallida">"Inicio de Sesión Fallido"</string>
    <string name="recobrar_password">"¿Has olvidado la contraseña?"</string>
    <string name="informacion_proximamente">Próximamente Habilitado</string>
    <string name="configuracion_guardar">Configuraciones Guardadas</string>
    <string name="reenviar_codigo">Reenviar Código de Confirmación</string>
    <string name="error_crear_usuario">No se Pudo Crear el Usuario</string>
    <string name="password_no_conicide">La Contraseña No Coincide</string>
    <string name="falta_informacion">Debe Llenar Todos los Campos</string>
    <string name="guardar_configuraciones">Guardar Configuración</string>
    <string name="configuracion_usuario">Configuración de la APP</string>
    <string name="nombre_principal">Agente de Respuesta SIGOAVE</string>
    <string name="politicas_privacidad">Políticas de Privacidad</string>
    <string name="condiciones_usuario">Condiciones de Servicio</string>
    <string name="nuevo_password_usuario">Ingresar Contraseña</string>
    <string name="informacion_trafico">Información de Tráfico</string>
    <string name="informacion_usuario">Información de Usuario</string>
    <string name="codigo_verificacion">Código de Verificación</string>
    <string name="ir_a_configuraciones">Ir a Configuraciones</string>
    <string name="ingrese_usuario">Debe Ingresar un Usuario</string>
    <string name="condiciones_precipitacion">Precipitación</string>
    <string name="nuevo_password">Ingrese Nueva Contraseña</string>
    <string name="recuperar_password">Recuperar Contraseña</string>
    <string name="nuevo_correo_usuario">Correo Electrónico</string>
    <string name="nuevo_apellido_usuario">Apellido Usuario</string>
    <string name="crear_nueva_cuenta">"Crear Cuenta Nueva"</string>
    <string name="condiciones_medicas">Condiciones Medicas</string>
    <string name="ayuda_comentarios">Ayuda y Comentarios</string>
    <string name="angulo_inclinacion">Ángulo Inclinación</string>
    <string name="usuario_apellido">Apellido de Cliente</string>
    <string name="tab_flujo">Condiciones Metereológicas</string>
    <string name="alertas_muy_altas">Alertas Muy Altas</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="desea_cerrar_sesion">¿Cerrar Sesión?</string>
    <string name="verificar_usuario">Verificar Usuario</string>
    <string name="enviar_comentario">Enviar Comentario</string>
    <string name="flujo_vehiculos">Número de Vehículos</string>
    <string name="nuevo_nombre_usuario">Nombre Usuario</string>
    <string name="temperatura_motor">Temperatura Motor</string>
    <string name="condiciones_temperatura">Temperatura</string>
    <string name="condiciones_viento">Velocidad Viento</string>
    <string name="titulo_comentario">Titulo Comentario</string>
    <string name="condiciones">Condiciones de Servicio</string>
    <string name="informacion">Información del Usuario</string>
    <string name="usuario_username">Nombre de Usuario</string>
    <string name="flujo_velocidad">Velocidad Promedio</string>
    <string name="flujo_ocupacion">Ocupación Promedio</string>
    <string name="correo_usuario">Correo Electrónico</string>
    <string name="telefono_usuario">Teléfono Usuario</string>
    <string name="politicas">Políticas de Privacidad</string>
    <string name="usuario_invalido">Usuario Inválido</string>
    <string name="verificar_codigo">Verificar Código</string>
    <string name="cambiar_satelital">Vista Satelital</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="nombre_apellido">Nombre y Apellido</string>
    <string name="usuario_nombre">Nombre de Cliente</string>
    <string name="restablecer_password">Restablecer</string>
    <string name="tab_condiciones">Flujo de Tráfico</string>
    <string name="perfil_usuario">Perfil de Usuario</string>
    <string name="escoger_opcion">Escoja una Opción</string>
    <string name="usuario_guardar">Guardar Cambios</string>
    <string name="puntos_licencia">Puntos Licencia</string>
    <string name="estado_licencia">Estado Licencia</string>
    <string name="ingresar_codigo">Ingresar Código</string>
    <string name="flujo_direccion">Dirección Flujo</string>
    <string name="ver_ayudas">Obtener Ayuda Online</string>
    <string name="mensaje_enviado">Mensaje Enviado</string>
    <string name="medida_datos_muy_alta">MUY ALTA</string>
    <string name="correo_app">sigoave@epn.edu.ec</string>
    <string name="nivel_baterias">Nivel Baterias</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="alertas_medias">Alertas Medias</string>
    <string name="tab_datos">Datos del Vehículo</string>
    <string name="velocidad_vehiculo">Velocidad</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="condiciones_humedad">Humedad</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="alertas_bajas">Alertas Bajas</string>
    <string name="alertas_altas">Alertas Altas</string>
    <string name="confirmar_correo">CONFIRMAR</string>
    <string name="no_ingresado">No Ingresado</string>
    <string name="menu_lateral">Menu Lateral</string>
    <string name="flujo_ubicacion">Ubicación</string>
    <string name="no_permitido">No Permitido</string>
    <string name="cambiar_capas">Vista Capas</string>
    <string name="uso_lentes">Uso de Lentes</string>
    <string name="medida_datos_media">MEDIA</string>
    <string name="nuevo_cancelar">Cancelar</string>
    <string name="bienvenido">"Bienvenido"</string>
    <string name="valor_ejemplo">XXXXXXXXX</string>
    <string name="condiciones_lugar">Lugar</string>
    <string name="desactivada">Desactivada</string>
    <string name="medida_datos_alta">ALTA</string>
    <string name="medida_datos_baja">BAJA</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="genero_usuario">Género</string>
    <string name="contrasena">Contraseña</string>
    <string name="nuevo_limpiar">Limpiar</string>
    <string name="nuevo_guardar">Guardar</string>
    <string name="hola_mundo">HOLA MUNDO</string>
    <string name="mensaje_alerta">ALERTA</string>
    <string name="tipo_0">Administrador</string>
    <string name="medida_ejemplo">100%</string>
    <string name="nombre_app">SIGOAVE</string>
    <string name="edad_usuario">Edad</string>
    <string name="activada">Activada</string>
    <string name="rpm_vehiculo">RPM</string>
    <string name="tipo_1">Cliente</string>
    <string name="ok">OK</string>
    <string name="a">a</string>
</resources>