<?xml version="1.0" encoding="utf-8"?>
<!-- Creación de los elementos visuales y sus parametros correspondientes -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".clases.principal.PosicionFragmentoPestana"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/imagen_fondo"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:id="@+id/contenedorDatos"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="ExtraText">

    <View
        android:id="@+id/divisorDatos1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/imagenBanderaDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagenBanderaDatos"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/verde"
        app:layout_constraintBottom_toBottomOf="@+id/divisorDatos2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtMedidaDatos"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/medida_datos_baja"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/divisorDatos2"
        app:layout_constraintEnd_toStartOf="@+id/txtPorcentajeDatos"
        app:layout_constraintStart_toEndOf="@+id/imagenBanderaDatos"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtPorcentajeDatos"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/medida_ejemplo"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/divisorDatos2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/divisorDatos2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/txtDatoVelocidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/velocidad_vehiculo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtRPM"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/rpm_vehiculo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBaterias"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtBaterias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/nivel_baterias"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTemperatura"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/temperatura_motor"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAngulo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAngulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="70dp"
        android:text="@string/angulo_inclinacion"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDatoVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/valor_ejemplo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDatoRPM"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDatoRPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/valor_ejemplo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDatoBaterias"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDatoBaterias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/valor_ejemplo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDatoMotor"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDatoMotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/valor_ejemplo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDatoAngulo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDatoAngulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="70dp"
        android:text="@string/valor_ejemplo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>